I fixed the vertical alignment between the icon and the button text using FlexBox.

--- a/style.css
+++ b/style.css
@@ -92,7 +92,8 @@ main {
 }
 
 .product-card__button {
-  display: block;
+  display: flex;
+  justify-content: center;
   margin-top: var(--spacing-300);
   width: 100%;
   border: none;
@@ -105,7 +106,7 @@ main {
 }
 
 .product-card__button img {
-  margin: 0 var(--spacing-50);
+  margin: 0 var(--spacing-100);
 }
 
 .product-card__button:hover {
